# viz-world-bank-data-renew-energy

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
